# rubintv_analysis_service

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  build_docs.yaml  formatting.yaml  lint.yaml  yamllint.yaml
data/: butler.yaml  summit.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.rubintv.analysis.service/: design.rst  index.rst
python/lsst/rubintv/analysis/service/: __init__.py  butler.py  client.py  command.py  commands  commands.py  data.py  database.py  efd.py  logging.py  query.py  utils.py  viewer.py  worker.py
python/lsst/rubintv/analysis/service/commands/: __init__.py  butler.py  db.py  file.py  image.py  test.py
scripts/: config.yaml  joins.yaml  mock_server.py  rubintv_worker.py
tests/: joins.yaml  schema.yaml  test_command.py  test_database.py  test_query.py  utils.py
ups/: rubintv_analysis_service.table
